--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "inferno-tinymce",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
+  "description": "Inferno TinyMCE component",
+  "main": "lib/main.js",
   "author": {
     "name": "Joonas Salminen",
     "email": "joonas.salminen@visma.com"
   },
+  "homepage": "https://github.com/JoonasLUT/inferno-tinymce",
   "devDependencies": {
     "babel-plugin-inferno": "1.3.0-beta17",
     "inferno-scripts": "0.9.0"
   },
   "dependencies": {
-    "inferno": "1.0.0-beta37",
-    "inferno-component": "1.0.0-beta37"
+    "inferno": "1.0.0-beta44",
+    "inferno-component": "1.0.0-beta44"
   },
   "scripts": {
     "start": "inferno-scripts start",
